<resources>
    <string name="app_name">Angry Scott</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_text">You have 30 seconds to click as many dots as possible. Press the Start button to begin. Good luck and enjoy!</string>
    <string name="start_button">Start</string>
    <string name="results_score">Score</string>
    <string name="results_accuracy">% Accuracy</string>
    <string name="results_title">Thanks for playing!</string>
    <string name="home_button">Home</string>
    <string name="restart_button">Replay</string>
    <string name="score_count">Score:</string>
    <string name="time">Time:</string>
</resources>