<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/instructionID"
        android:layout_width="412dp"
        android:layout_height="37dp"
        android:layout_above="@+id/startID"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:layout_marginBottom="390dp"
        android:gravity="center"
        android:text="@string/instructions"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleID"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:layout_above="@+id/startID"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="492dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0E0E0E"
        android:textSize="22dp" />

    <Button
        android:id="@+id/startID"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="116dp"
        android:onClick="onClick"
        android:text="@string/start_button"
        app:backgroundTint="#4CAF50" />

    <EditText
        android:id="@+id/instructionTextID"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_above="@+id/startID"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="107dp"
        android:ems="10"
        android:enabled="true"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/instruction_text"
        android:textSize="18dp" />

</RelativeLayout>